# mlops-pedata

./: .gitignore  .pre-commit-config.yaml  README.md  delete_data.sh  preprocess.py  pyproject.toml
.githooks/: post-commit  pre-commit  pre-push
examples/: data_utils_examples.py  dataset_upload_update.py  dataset_upload_update.sh  embeddings_transform_examples.py  offset_mutation_codes.py  pytorch_examples.py  split.py  util.py
local_datasets/datafiles/: example_dataset_error1.csv  example_dataset_ha1.csv  example_dataset_ha1_insufficient.csv
src/pedata/: __init__.py  constants.py  disk_cache.py  integrity.py  pytorch_dataloaders.py  util.py
src/pedata/config/: __init__.py  alphabets.py  encoding_specs.py  paths.py
src/pedata/docs/: generate_doc.sh
src/pedata/encoding/: __init__.py  base.py  embeddings.py  embeddings_transform.py  transform.py  transforms_graph.py  util.py
src/pedata/hfhub_tools/: __init__.py  constants.py  explore.py  readme_update.py  rename_columns.py  upload.py
test/: _doctest.py  conftest.py  run  test_company_data.py  test_disk_cache.py  test_embeddings.py  test_embeddings_transform.py  test_encoding_specs.py  test_encoding_util.py  test_exazyme_dataset_explore.py  test_exazyme_dataset_rename_column.py  test_exazyme_dataset_utils.py  test_exazyme_datasets_split.py  test_exazyme_datasets_upload.py  test_exazyme_datasets_vis.py  test_integrity.py  test_mutation.py  test_mutation_converter.py  test_mutation_extractor.py  test_mutation_util.py  test_pytorch_dataloaders.py  test_transform.py  test_transform_graph.py  test_util.py
(+31 files in other folders)
