[build-system]
requires = ["setuptools", "setuptools-scm",]
build-backend = "setuptools.build_meta"

[project]
name = "pedata"
description = "Pedata is a library for handling protein engineering datasets in a standard way."
readme = "README.md"
requires-python = ">=3.10"
#author="Company"
#author_email = "info@Company.com"
#keywords = ["protein", "enzyme", "peptide", "deep learning" "RKHS", "ML", "AI"]
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "huggingface_hub==0.19.4",
    "datasets",
    "pandas==2.1.3",
    "openpyxl",
    "numpy==1.26.2",
    "torch==2.1.1",
    "jax==0.4.23",
    "scipy",
    "scikit-learn==1.3.2",
    "Bio==1.6.0",
    "jax_unirep==2.2.0",
    "fair-esm==2.0.0",
    "ankh==1.10.0",
    "seaborn",
    "matplotlib"
]
dynamic = ["version"]

[project.optional-dependencies]
doc = ["sphinx", "sphinx-press-theme"]
ci = ["pytest", "pytest-html", "pytest-cov", "interrogate", "black"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pedata = ["*.csv", "*.json"]

#[project.scripts]
#my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
